--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Simon Oulevay (Alpha Hydrae)
-  description: Installs the Go language.
+  description: Installs the Go language with asdf.
   license: MIT
   min_ansible_version: 2.0
 
@@ -15,5 +15,10 @@ galaxy_info:
   galaxy_tags:
     - go
     - golang
+    - dep
+    - asdf
 
-dependencies: []
+dependencies:
+  - role: AlphaHydrae.asdf-plugin
+    asdf_plugin_name: golang
+    asdf_plugin_global_version: "{{ go_version }}"
